test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_ptr_addition.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[0]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: ptr
        None: 
        Pointer: 
          Structure: 
            TIdentifier: s
            Bool: 0
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CEqual: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    None: 
                  CVar: 
                    TIdentifier: ptr
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
